# sandcastle

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  deploy.yaml  release.yaml
crates/auth/: Cargo.toml
crates/auth/src/: github_auth.rs  handlers.rs  lib.rs  middleware.rs  provider.rs
crates/auth/src/providers/: github.rs  google.rs  local.rs  mod.rs
crates/auth_core/: Cargo.toml
crates/auth_core/src/: lib.rs
crates/auth_provider_github/: Cargo.toml
crates/auth_provider_github/src/: lib.rs
crates/auth_provider_google/: Cargo.toml
crates/auth_provider_google/src/: lib.rs
crates/daytona_sdk/: Cargo.toml
crates/daytona_sdk/src/: lib.rs
crates/github_token_provider/: Cargo.toml
crates/github_token_provider/src/: lib.rs
crates/keychain/: Cargo.toml
crates/keychain/src/: lib.rs
crates/rook/: Cargo.toml
crates/rook/src/: main.rs
crates/rook_proto/: Cargo.toml
crates/rook_proto/src/: lib.rs
crates/sandbox_provider_daytona/: Cargo.toml
crates/sandbox_provider_daytona/src/: lib.rs
crates/sandbox_provider_docker/: Cargo.toml
crates/sandbox_provider_docker/src/: lib.rs
crates/sandbox_provider_k8s/: Cargo.toml
crates/sandbox_provider_k8s/src/: lib.rs
crates/sandbox_provider_local/: Cargo.toml
crates/sandbox_provider_local/src/: lib.rs
crates/sandbox_providers/: Cargo.toml
crates/sandbox_providers/src/: daytona.rs  daytona_auth.rs  docker.rs  lib.rs  local.rs
crates/sandbox_providers_core/: Cargo.toml
crates/sandbox_providers_core/src/: lib.rs
crates/sandcastle/: Cargo.toml
crates/sandcastle/src/: config.rs  github_auth_routes.rs  handler.rs  main.rs  rook_ws.rs  secret_routes.rs  secrets.rs
crates/secrets/: Cargo.toml
crates/secrets/src/: lib.rs
crates/secrets_core/: Cargo.toml
crates/secrets_core/src/: lib.rs
crates/secrets_gcp/: Cargo.toml
crates/secrets_gcp/src/: lib.rs
crates/secrets_k8s/: Cargo.toml
crates/secrets_k8s/src/: lib.rs
crates/secrets_memory/: Cargo.toml
crates/secrets_memory/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs  types.rs
crates/store_core/: Cargo.toml
crates/store_core/src/: lib.rs
crates/store_memory/: Cargo.toml
crates/store_memory/src/: lib.rs
crates/store_postgres/: Cargo.toml
crates/store_postgres/migrations/: 0001_init.sql  0002_sandbox_status.sql
crates/store_postgres/src/: lib.rs
crates/util/: Cargo.toml
crates/util/src/: lib.rs
deploy/: Dockerfile  rook.Dockerfile
deploy/k8s/: Chart.yaml  values.yaml
deploy/k8s/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  postgres.yaml  role.yaml  rolebinding.yaml  sandbox-namespace.yaml  sandbox-role.yaml  sandbox-rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/terraform/: iam.tf  registry.tf  run.tf  secrets.tf  sql.tf  variables.tf
src/: github_auth.rs  handler.rs  main.rs
src/auth/: handlers.rs  middleware.rs  mod.rs
src/sandbox_providers/: local.rs  mod.rs
xtask/src/: main.rs
