[package]
name = "sandcastle-auth"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-util = { path = "../util" }
sandcastle-keychain = { path = "../keychain" }
sandcastle-store = { path = "../store" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
octocrab = "0.44"
jsonwebtoken = "9"
secrecy = "0.10"
async-trait = "0.1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
