[package]
name = "sandcastle-auth"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-util = { workspace = true }
sandcastle-auth-core = { workspace = true }
sandcastle-auth-provider-github = { workspace = true }
sandcastle-auth-provider-google = { workspace = true }
sandcastle-store = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
