[package]
name = "sandcastle-daytona-sdk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
