[package]
name = "sandcastle-github-token-provider"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow       = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
tracing      = { workspace = true }
jsonwebtoken = { workspace = true }
humantime = { workspace = true }
