[package]
name = "rook"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "rook"
path = "src/main.rs"

[dependencies]
sandcastle-rook-proto = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
