[package]
name = "sandcastle-sandbox-provider-daytona"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-sandbox-providers = { path = "../sandbox_providers" }
sandcastle-util = { path = "../util" }
sandcastle-keychain = { path = "../keychain" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
serde_json = "1"
daytona-client = "0.5.0"
uuid = "1"
