[package]
name = "sandcastle-sandbox-provider-daytona"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-sandbox-providers-core = { workspace = true }
sandcastle-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
daytona-client = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
