[package]
name = "sandcastle-sandbox-provider-k8s"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-sandbox-providers-core = { workspace = true }
sandcastle-rook-proto = { workspace = true }
sandcastle-util = { workspace = true }
async-trait = { workspace = true }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
kube = { version = "0.99", features = ["client"] }
tokio = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
