[package]
name = "sandcastle-sandbox-provider-local"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-sandbox-providers-core = { workspace = true }
sandcastle-util = { workspace = true }
async-trait = { workspace = true }
glob = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
