[package]
name = "sandcastle-sandbox-providers"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-util = { path = "../util" }
sandcastle-keychain = { path = "../keychain" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
regex = "1"
walkdir = "2"
bollard = "0.18"
futures-util = "0.3"
daytona-client = "0.5.0"
uuid = "1"
