[package]
name = "sandcastle"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-util = { workspace = true }
sandcastle-auth = { workspace = true }
sandcastle-auth-provider-github = { workspace = true }
sandcastle-auth-provider-google = { workspace = true }
sandcastle-sandbox-providers = { workspace = true }
sandcastle-sandbox-provider-local = { workspace = true }
sandcastle-sandbox-provider-docker = { workspace = true }
sandcastle-sandbox-provider-daytona = { workspace = true }
sandcastle-store = { workspace = true }
sandcastle-store-memory = { workspace = true }
sandcastle-store-postgres = { workspace = true }
sandcastle-secrets = { workspace = true }
sandcastle-secrets-memory = { workspace = true }
sandcastle-secrets-gcp = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
