[package]
name = "sandcastle"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-util = { workspace = true }
sandcastle-auth = { workspace = true }
sandcastle-sandbox-providers = { workspace = true }
sandcastle-store = { workspace = true }
sandcastle-secrets = { workspace = true }
sandcastle-rook-proto = { workspace = true }
sandcastle-github-token-provider = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
axum = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
