[package]
name = "sandcastle-secrets"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-secrets-core = { workspace = true }
sandcastle-store-core = { workspace = true }
sandcastle-secrets-memory = { workspace = true }
sandcastle-secrets-gcp = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
