[package]
name = "sandcastle-secrets-gcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-secrets = { path = "../secrets" }
sandcastle-store = { path = "../store" }
sandcastle-util = { path = "../util" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
serde_json = "1"
tracing = "0.1"
anyhow = "1"
