[package]
name = "sandcastle-secrets-gcp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-secrets = { workspace = true }
sandcastle-store = { workspace = true }
sandcastle-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
