[package]
name = "sandcastle-secrets-k8s"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-secrets-core = { workspace = true }
sandcastle-store-core = { workspace = true }
sandcastle-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
k8s-openapi = { version = "0.24", features = ["v1_31"] }
kube = { version = "0.99", features = ["client"] }
tracing = { workspace = true }
