[package]
name = "sandcastle-store"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-store-core = { workspace = true }
sandcastle-store-memory = { workspace = true }
sandcastle-store-postgres = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
