[package]
name = "sandcastle-store-postgres"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
sandcastle-store-core = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
